Deleted useless codes, Added motion page, merged to main.py

--- a/examples/templates/confirm.html
+++ b/examples/templates/confirm.html
@@ -257,7 +257,7 @@
         <div class="canvas">
             <img id="mainGif" src="/get_image/web_test/video.gif" alt="Main GIF">
         </div>
-        <a href="/joint_overlay" class="btn-prev">Prev</a>
+        <a href="/motion" class="btn-prev">Prev</a>
         
         <form action="/move_gif" enctype="multipart/form-data" method="post">
             <input type="submit" class="btn-common btn-submit" value="Submit">
