--- a/examples/templates/mask.html
+++ b/examples/templates/mask.html
@@ -224,7 +224,7 @@
         <div class="canvas">
             <img id="Mask" src="/get_image/web_test/mask.png" alt="Mask">
         </div>
-        <a href="/texture" class="btn-prev">Prev</a>
+        <a href="/upload" class="btn-prev">Prev</a>
         <a href="/joint_overlay" class="btn-next">Next</a>
     </div>
 
