--- a/examples/templates/index.html
+++ b/examples/templates/index.html
@@ -25,7 +25,8 @@
             font-size: 5vw;
             color: #333;
             text-shadow: 0.25vw 0.25vw 0.5vw rgba(0, 0, 0, 0.5);
-            margin: 3vh 0 1.5vh 0;
+            margin-top: 1vh;
+            margin-bottom: 1vh;
             animation: bounce 1s infinite;
         }
 
@@ -50,7 +51,7 @@
             box-shadow: 0 0.4vw 0.8vw rgba(0, 0, 0, 0.1);
             padding: 2vh;
             text-align: center;
-            margin-top: 1.5vh;
+            margin-top: 1vh;
             border-radius: 1.5vw;
         }
 
@@ -62,7 +63,7 @@
             border-radius: 0.4vw;
             cursor: pointer;
             transition: background-color 0.3s;
-            min-width: 15vw;
+            min-width: 20vw;
             text-align: center;
         }
 
@@ -73,14 +74,6 @@
 
         .btn-create:hover {
             background-color: #555;
-        }
-
-        .btn-template {
-            background-color: #87CEFA;
-            border-color: #87CEFA;
-            color: white;
-            box-shadow: 0 0.3vw 0.6vw rgba(0, 0, 0, 0.1);
-            width: auto;
         }
 
         .button-container {
@@ -185,13 +178,12 @@
 <body>
     <h1 class="title">Animated Tale</h1>
     <div class="canvas-container">
-        <div class="button-container">
-            <button class="btn-common btn-create" onclick="location.href='/story';">Create</button>
-            <button class="btn-common btn-template" onclick="location.href='/template';">Template</button>
-
-        </div>
+        
         <div class="canvas">
             <img id="mainGif" src="/get_image/web_contents/main_video.gif" alt="Main GIF">
+        </div>
+        <div class="button-container">
+            <button class="btn-common btn-create" onclick="location.href='/upload';">START!</button>
         </div>
     </div>
 
