--- a/examples/templates/upload.html
+++ b/examples/templates/upload.html
@@ -300,7 +300,7 @@
             <img id="uploadedImage" src="" alt="Uploaded Image" style="display: none;">
 
         </div>
-        <a href="/story" class="btn-prev">Prev</a>
+        <a href="/" class="btn-prev">Prev</a>
         <form action="/process_upload" enctype="multipart/form-data" method="post">
             <div class="upload-btn-wrapper">
                 <button class="btn-common btn-upload">Upload</button>
