--- a/examples/templates/index.html
+++ b/examples/templates/index.html
@@ -5,180 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/get_image/web_contents/AT_Logo.ico" type="image/x-icon">
     <title>Animated Tale</title>
-    <style>
-        body {
-            font-family: 'Comic Sans MS', 'Chalkboard SE', 'Arial', sans-serif;
-            background-color: #F7E0D3;
-            background-image: url('https://www.transparenttextures.com/patterns/sketch.png');
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-    
-        .title {
-            text-align: center;
-            font-size: 5vw;
-            color: #333;
-            text-shadow: 0.25vw 0.25vw 0.5vw rgba(0, 0, 0, 0.5);
-            margin-top: 1vh;
-            margin-bottom: 1vh;
-            animation: bounce 1s infinite;
-        }
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 
-        .canvas-container {
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: rgba(255, 255, 255, 0.5);
-            flex-direction: column;
-            margin-bottom: 5vh;
-            width: 100%;
-            padding: 2vh 0;
-        }
-
-        .canvas {
-            position: relative;
-            width: 40vw;
-            height: 50vh;
-            background-color: white;
-            border: 0.1vw solid #ccc;
-            box-shadow: 0 0.4vw 0.8vw rgba(0, 0, 0, 0.1);
-            padding: 2vh;
-            text-align: center;
-            margin-top: 1vh;
-            border-radius: 1.5vw;
-        }
-
-        .btn-common {
-            font-size: 1.5vw;
-            padding: 1.5vh 2vw;
-            margin: 0 0.5vw;
-            border: 0.08vw solid #ccc;
-            border-radius: 0.4vw;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            min-width: 20vw;
-            text-align: center;
-        }
-
-        .btn-create {
-            background-color: #333;
-            color: #FFF;
-        }
-
-        .btn-create:hover {
-            background-color: #555;
-        }
-
-        .button-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 2vh; 
-            margin-bottom: 1.5vh;
-        }
-
-        /* -----------------------Doodles-------------------------------*/
-        .balloon {
-            position: absolute;
-            bottom: 10vh;
-            animation: float 4s infinite, drift 2s infinite;
-            opacity: 0.8;
-            z-index: -1;
-        }
-        .doodle {
-            position: absolute;
-            width: 100px;
-            height: 100px;
-            background-color: transparent;
-            border-radius: 50%;
-            z-index: -1;
-        }
-        .doodle.circle {
-            border: 2px solid #FF5733;
-            animation: doodleAnimation 7s infinite alternate;
-        }
-        @keyframes doodleAnimation {
-            0% {
-                transform: scale(0.8);
-            }
-            100% {
-                transform: scale(1.3);
-            }
-        }
-        .doodle.line {
-            width: 150px;
-            height: 5px;
-            background-color: #33FF57;
-            transform: rotate(45deg);
-            animation: doodleAnimation2 5s infinite alternate;
-        }
-        @keyframes doodleAnimation2 {
-            0% {
-                transform: rotate(78deg);
-            }
-            100% {
-                transform: rotate(45deg);
-            }
-        }
-        .doodle.dot {
-            width: 15px;
-            height: 15px;
-            background-color: #5733FF;
-            border-radius: 50%;
-        }
-        .doodle.zigzag {
-            width: 100px;
-            height: 10px;
-            background: linear-gradient(45deg, #FF5733 25%, transparent 25%, transparent 50%, #FF5733 50%, #FF5733 75%, transparent 75%, transparent);
-            background-size: 20px 20px;
-            animation: doodleAnimationZigzag 6s infinite alternate;
-        }
-        @keyframes doodleAnimationZigzag {
-            0% {
-                transform: rotate(0deg);
-            }
-            100% {
-                transform: rotate(30deg);
-            }
-        }
-        .doodle.squiggle {
-            width: 60px;
-            height: 20px;
-            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 5"><path d="M0 5 Q5 0 10 5" stroke="#5733FF" fill="none"/></svg>');
-            background-repeat: repeat-x;
-            animation: doodleAnimationSquiggle 7s infinite alternate;
-        }
-        @keyframes doodleAnimationSquiggle {
-            0% {
-                transform: translateY(0);
-            }
-            100% {
-                transform: translateY(-5px);
-            }
-        }
-        #mainGif {
-            height: 90%;
-            display: block;
-            margin: auto;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-    </style>
-    
 </head>
 <body>
     <h1 class="title">Animated Tale</h1>
     <div class="canvas-container">
-        
+
         <div class="canvas">
             <img id="mainGif" src="/get_image/web_contents/main_video.gif" alt="Main GIF">
         </div>
@@ -206,7 +39,7 @@
     <div class="doodle zigzag" style="top: 70%; right: 10%;"></div>
     <div class="doodle zigzag" style="top: 6%; right: 27%;"></div>
     <div class="doodle squiggle" style="top: 65%; right: 20%;"></div>
-    
+
 </body>
 
 </html>
