debugged upload page

--- a/examples/templates/motion.html
+++ b/examples/templates/motion.html
@@ -282,7 +282,7 @@
                 <img src="/get_image/web_contents/motions/jelly.gif" alt="GIF 2", data-name="jelly">
                 <img src="/get_image/web_contents/motions/jesse_dance.gif" alt="GIF 2", data-name="jesse_dance">
                 <img src="/get_image/web_contents/motions/jumping_jacks.gif" alt="GIF 2", data-name="jumping_jacks">
-                <img src="/get_image/web_contents/motions/runningjump.gif" alt="GIF 2", data-name="runningjump">
+                <img src="/get_image/web_contents/motions/wave_hello.gif" alt="GIF 2", data-name="wave_hello">
             </div>
         </div>
         <a href="/joint_overlay" class="btn-prev">Prev</a>
