--- a/examples/templates/index.html
+++ b/examples/templates/index.html
@@ -16,7 +16,7 @@
             <img id="mainGif" src="/get_image/web_contents/main_video.gif" alt="Main GIF">
         </div>
         <div class="button-container">
-            <button class="btn-common btn-create" onclick="location.href='/upload';">START!</button>
+            <label for="fileInput" class="btn-common btn-create" onclick="location.href='/upload';">Start!</label>
         </div>
     </div>
 
