--- a/examples/templates/upload.html
+++ b/examples/templates/upload.html
@@ -114,6 +114,32 @@
             }
         });
 
+        window.addEventListener('mousemove', function(e){
+            console.log(select_circle)
+            if(mouse_state == 1 && select_circle != -1){
+                X = e.layerX
+                Y = e.layerY
+
+                $(`#${select_circle}`).css("cx", X)
+                $(`#${select_circle}`).css("cy", Y)
+            }
+        })
+
+        window.addEventListener('mousedown', function(e){
+            if(e.target.classList[0] == undefined){
+                mouse_state = 1
+            }
+            if(e.target.classList[0] == "canvas"){
+                mouse_state = 0
+                // select_circle = -1
+            }
+        })
+
+        window.addEventListener('mouseup', function(e){
+            mouse_state = 0
+            select_circle = -1
+        })
+
     </script>
 </body>
 
