--- a/examples/templates/motion.html
+++ b/examples/templates/motion.html
@@ -283,6 +283,11 @@
                 <img src="/get_image/web_contents/motions/jesse_dance.gif" alt="GIF 2", data-name="jesse_dance">
                 <img src="/get_image/web_contents/motions/jumping_jacks.gif" alt="GIF 2", data-name="jumping_jacks">
                 <img src="/get_image/web_contents/motions/wave_hello.gif" alt="GIF 2", data-name="wave_hello">
+                <img src="/get_image/web_contents/motions/lala.gif" alt="GIF 2", data-name="lala">
+                <img src="/get_image/web_contents/motions/sun.gif" alt="GIF 2", data-name="sun">
+                <img src="/get_image/web_contents/motions/waltz_f.gif" alt="GIF 2", data-name="waltz_f">
+                <img src="/get_image/web_contents/motions/jazz.gif" alt="GIF 2", data-name="jazz">
+                <img src="/get_image/web_contents/motions/zombie.gif" alt="GIF 2", data-name="zombie">
             </div>
         </div>
         <a href="/joint_overlay" class="btn-prev">Prev</a>
